--- a/Sections/Components/ParentComponent.razor
+++ b/Sections/Components/ParentComponent.razor
@@ -9,6 +9,18 @@
     }
 </style>
 
+<SectionContent SectionName="child-content">
+    <div>
+        From parent to child
+    </div>
+</SectionContent>
+
+<SectionContent SectionName="top-row-content">
+    <div>
+        ParentComponent
+    </div>
+</SectionContent>
+
 @code {
     private SectionOutlet ParentContent = new();
 }
